core/scss/components/sidebar/sidebar.scss
/** @ @component sidebar */

@include exports('md-sidebar') {
  .#{$prefix}-sidebar {
    $parent: &;
    z-index: $zindex-sidebar;
    height: 100%;
    max-width: rem-calc(240);

    min-width: rem-calc(200);
    background-color: $md-white-100;
    position: relative;
    @include flex($fd: column, $ai: flex-start);

    &--expanded {
      display: block;
    }

    &--collapsed {
      display: none;
    }

    &--topbar {
      padding-top: $top-bar__height--desktop;
    }

    &__footer,
    &__header {
      width: 100%;

      @include flex($fd: column);
    }

    &--fixed {
      position: fixed;
      top: 0;
      left: 0;
    }

    &--minimized {
      width: rem-calc(68);
      min-width: 0;
    }

    &:hover + .md-sidebar__toggle {
      opacity: 1.0;
    }

    &__toggle {
      display: flex;
      z-index: 7;
      width: 12px;
      min-height: 100vh;
      padding: 0;
      margin-left: 15rem;
      text-decoration: none;
      box-shadow: none;
      flex-direction: column;
      justify-content: center;
      position: absolute;
      top: 0;
      opacity: 0.0;

      &:hover{
        opacity: 1.0;
      }
    }

    &__toggle--minimized {
      margin-left: 4.2rem;
    }

    &__toggle--collapsed {
      margin-left: 0;
      opacity: 1.0;
    }

    &--global {
      background-color: $black-08;

      #{$parent} {
        &-nav {
          &__group {
            &--primary {
              .#{$list-item__class} {
                height: rem-calc(40);
                font-size: rem-calc(14);

                &__left {
                  font-size: rem-calc(16);
                }

                @include list-item-color(
                  $active-bgrd-color: $black-08,
                  $active-color: $md-black-100,
                  $background-color: transparent,
                  $color: $md-black-100,
                  $focus-color: $black-04,
                  $header-color: $md-black-100,
                  $hover-bgrd-color: $black-04,
                  $includeFocus: false,
                  $subheader-color: $md-black-100
                );
              }

              #{$parent}-nav__group--secondary {
                .#{$list-item__class} {
                  @include list-item-color(
                    $active-bgrd-color: $black-08,
                    $active-color: $md-black-100,
                    $background-color: transparent,
                    $color: $md-gray-90,
                    $focus-color: $black-04,
                    $hover-bgrd-color: $black-04,
                    $includeFocus: false,
                    $section-left-color: $md-gray-90,
                    $section-right-color: $md-gray-90
                  );
                }
              }
            }
          }
        }
      }

      &#{$parent}--nested {
        #{$parent} {
          &-nav {
            &__group {
              &--primary {
                .#{$list-item__class} {
                  height: rem-calc(44);
                  padding: 0 rem-calc(20);
                  font-size: rem-calc(16);

                  &__left {
                    font-size: rem-calc(20);
                  }

                  @include list-item-color(
                    $active-bgrd-color: $black-08,
                    $active-color: $md-black-100,
                    $background-color: transparent,
                    $color: $md-gray-90,
                    $focus-color: $black-04,
                    $hover-bgrd-color: $black-04,
                    $includeFocus: false,
                    $section-left-color: $md-gray-90,
                    $section-right-color: $md-gray-90
                  );
                }
              }
            }
          }
        }
      }

      &#{$parent}--indented {
        #{$parent} {
          &-nav {
            &__group {
              &--primary {
                #{$parent}-nav__group--secondary {
                  .#{$list-item__class} {
                    padding-left: rem-calc(56);
                  }

                  #{$parent}-nav__group--tertiary {
                    .#{$list-item__class} {
                      padding-left: rem-calc(68);
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    &--nested {
      width: rem-calc(240);
    }

    &--topbar {
      padding-top: $top-bar__height--desktop;
    }

    &__body {
      width: 100%;
      height: 100%;
      overflow-y: auto;
      flex-basis: auto;
      flex-grow: 1;
    }

    .#{$list-item__class} {
      &:focus {
        box-shadow: none;
      }
    }

    &-nav {
      padding-top: rem-calc(56);

      &--header {
        padding-top: rem-calc(24);
      }

      &__header {
        height: rem-calc(36);
        padding: 0 rem-calc(24);
        margin-bottom: rem-calc(8);
        font-size: rem-calc(12);
        line-height: rem-calc(16);
        color: $md-gray-70;
        text-transform: uppercase;
        border-bottom: 1px solid $black-08;

        @include flex($jc: flex-start);
      }

      &__group {
        &--expanded {
          display: block;
        }

        &--collapsed {
          display: none;
        }

        width: 100%;

        &--primary {
          .#{$list-item__class} {
            padding: 0 rem-calc(24);

            @include list-item-color(
              $active-bgrd-color: transparent,
              $active-color: $md-theme-80,
              $active-section-right-color: $black-60,
              $background-color: transparent,
              $color: $md-black-100,
              $header-color: $md-black-100,
              $hover-color: $md-theme-70,
              $hover-bgrd-color: transparent,
              $includeFocus: false,
              $section-right-color: $black-60,
              $subheader-color: $md-black-100
            );
          }

          #{$parent}-nav__group--secondary {
            padding-bottom: rem-calc(8);

            .#{$list-item__class} {
              height: rem-calc(36);
              font-size: rem-calc(14);

              @include list-item-color(
                $active-bgrd-color: transparent,
                $active-color: $md-theme-80,
                $active-section-right-color: $black-60,
                $background-color: transparent,
                $color: $md-gray-70,
                $header-color: $md-gray-70,
                $hover-color: $md-theme-70,
                $hover-bgrd-color: transparent,
                $includeFocus: false,
                $section-right-color: $black-60,
                $subheader-color: $md-gray-70
              );
            }

            #{$parent}-nav__group--tertiary {
              padding-top: rem-calc(4);

              .#{$list-item__class} {
                height: rem-calc(32);
                padding-left: rem-calc(36);
                font-size: rem-calc(12);

                @include list-item-color(
                  $active-bgrd-color: transparent,
                  $active-color: $md-theme-80,
                  $active-section-right-color: $black-60,
                  $background-color: transparent,
                  $color: $md-gray-90,
                  $header-color: $md-gray-90,
                  $hover-color: $md-theme-70,
                  $hover-bgrd-color: transparent,
                  $includeFocus: false,
                  $section-right-color: $black-60,
                  $subheader-color: $md-gray-90
                );

                &:before {
                  position: absolute;
                  width: 2px;
                  height: rem-calc(32);
                  content: '';
                  box-shadow: -12px 0 0 0 $black-12;
                }

                &:only-child {
                  &:before {
                    height: 100%;
                  }
                }

                &:first-of-type:not(:only-child) {
                  &:before {
                    bottom: 0;
                    height: calc(100% - 16%);
                  }
                }

                &:last-of-type:not(:only-child) {
                  &:before {
                    top: 0;
                    height: calc(100% - 16%);
                  }
                }

                &:focus {
                  &:after {
                    position: absolute;
                    width: 2px;
                    height: calc(100% - 33%);
                    content: '';
                    box-shadow: -12px 0 0 0 $md-theme-70;
                  }
                }

                &:hover {
                  &:after {
                    position: absolute;
                    width: 2px;
                    height: calc(100% - 33%);
                    content: '';
                    box-shadow: -12px 0 0 0 $md-theme-70;
                  }
                }

                &:active,
                &.active {
                  &:after {
                    position: absolute;
                    width: 2px;
                    height: calc(100% - 33%);
                    content: '';
                    box-shadow: -12px 0 0 0 $md-theme-80;
                  }
                }
              }
            }
          }
        }
      }
    }

    &--dark#{$parent} {
      background-color: $md-gray-90;

      #{$parent} {
        &-nav {
          &__group {
            &--primary {
              .#{$list-item__class} {
                @include list-item-color(
                  $active-bgrd-color: rgba(0, 115, 149, 0.56),
                  $active-color: $md-white-100,
                  $active-section-left-color: $md-white-100,
                  $active-section-right-color: $md-white-100,
                  $background-color: transparent,
                  $color: $md-white-100,
                  $focus-color: $md-white-100,
                  $header-color: $md-white-100,
                  $hover-color: $md-white-100,
                  $hover-bgrd-color: rgba(0, 115, 149, 0.4),
                  $includeFocus: false,
                  $section-left-color: $white,
                  $section-right-color: $white,
                  $subheader-color: $white
                );
              }

              & #{$parent}-nav__group--secondary {
                .#{$list-item__class} {
                  @include list-item-color(
                    $active-bgrd-color: rgba(0, 115, 149, 0.56),
                    $active-color: $md-white-100,
                    $active-section-left-color: $md-white-100,
                    $active-section-right-color: $md-white-100,
                    $background-color: transparent,
                    $color: $white-80,
                    $focus-color: $white-80,
                    $header-color: $white-80,
                    $hover-color: $white-80,
                    $hover-bgrd-color: rgba(0, 115, 149, 0.4),
                    $includeFocus: false,
                    $section-left-color: $white,
                    $section-right-color: $white,
                    $subheader-color: $white-80
                  );
                }

                & #{$parent}-nav__group--tertiary {
                  .#{$list-item__class} {
                    @include list-item-color(
                      $active-bgrd-color: transparent,
                      $active-color: $md-theme-70,
                      $background-color: transparent,
                      $color: $white-80,
                      $focus-color: $md-theme-70,
                      $hover-color: $md-theme-70,
                      $hover-bgrd-color: transparent,
                      $includeFocus: false
                    );

                    &:before {
                      box-shadow: -12px 0 0 0 $white-12;
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}

